# jaxeffort

./: ARCHITECTURE.md  Artifacts.toml  README.md  generate_doc_plots.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  publish.yml  tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/contributing/: index.html
0.1.0/search/: search_index.json
0.1.0/usage_examples/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/contributing/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/api/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.3/: 404.html  index.html  sitemap.xml
0.2.4/: 404.html  index.html  sitemap.xml
0.2.5/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: api.md  contributing.md  index.md  usage_examples.md
jaxeffort/: __init__.py  background.py  data_fetcher.py  jaxeffort.py
notebooks/: Untitled.ipynb  jaxeffort_example.ipynb  jaxeffort_example_marimo.py  jaxeffort_pybird.ipynb  jaxeffort_velocileptors_lpt.ipynb  jaxeffort_velocileptors_rept.ipynb
tests/: __init__.py  test_background_functions.py  test_bias_combination.py  test_cache_management_advanced.py  test_data_fetcher.py  test_data_fetcher_robust.py  test_effortjl_comparison.py  test_emulator_loading.py  test_init_robust.py  test_initialization.py  test_integration.py  test_integration_robust.py  test_jacobian.py  test_jaxeffort_core_robust.py  test_stochastic_terms.py  test_stochmodel.py  test_velocileptors_emulators.py
(+37 files in other folders)
