[tool.poetry]
name = "jaxeffort"
version = "0.1.0"
description = ""
authors = ["marcobonici <bonici.marco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.10.0"
jax = "^0.4.30"
quadax = "^0.2.9"
interpax = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
